# TypedUnit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  data.json  index.html  meta.yaml  pyproject.toml  version_switcher.json
.github/workflows/: deploy_documentation.yml
TypedUnit/: __init__.py  _version.py  units.py
TypedUnits/: directories.py  helper.py  units.py
docs/0.0.0.0/: .buildinfo  index.html  objects.inv  sg_execution_times.html  theory.html
docs/examples/: example_0.py  example_1.py
docs/latest/: code.html  genindex.html  index.html  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/source/: conf.py
docs/v0.0.1/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  sg_execution_times.html  theory.html
docs/v0.0.10/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.11/: code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.2/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  sg_execution_times.html  theory.html
docs/v0.0.3/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.4/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.5/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html  theory.html
docs/v0.0.6/: .buildinfo  code.html  genindex.html  index.html  objects.inv  references.html  search.html  (+3 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6cb55cdd1668e1dc_helper_py.html  z_6cb55cdd1668e1dc_units_py.html  z_d9c8b6f114102027_helper_py.html  z_d9c8b6f114102027_units_py.html
tests/: test_0.py
(+146 files in other folders)
